--- a/index.html
+++ b/index.html
@@ -3,58 +3,194 @@ layout: default
 title: Home
 ---
 
-<div class="container container-md">
-
-  <!-- Our Mission -->
-  <div class="row row-mint-bg">
-    <div class="col-md-6 align-self-center">
-      <img class="col-bg" src="assets/img/mission.png"/>
-    </div>
-    <div class="col-md-6 align-self-center">
-      <div class="col-box col-box-white"> 
-        <h3>Our Mission</h3>
-        <h2>Driving the digital change in plant science</h2>
-        <p>
-          DataPLANT will path the way from classical paper publication to pure data publication
-          including the annotated research context.
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="row row-mint-bg">
-    <div class="col col-md-12">
-      <div class="btn-learn-more w-50 mx-auto">
-        <a href="#">learn more</a>
-      </div>
+<!-- Title -->
+<div class="container bg-white pt-4 pb-3">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-9 pb-5 pb-lg-0">
+      <img src="assets/img/nfdi-hero.svg" style="width: 100%; margin-bottom: -3rem;"/>
     </div>
   </div>
 
-  <!-- Community -->
-  <div class="row row-darkblue-bg">
-    <div class="col col-md-6 align-self-center">
-      <div class="col-box">
-        <div class="col-box-plants">
-          <div class="col-box col-box-overlay"> 
-            <h3>The Community</h3>
-            <h2>Fundamental research in plant science</h2>
-            <p>
-              DataPLANT will path the way from classical paper publication to pure data publication
-              including the annotated research context.
-            </p>
-          </div>
+  <div class="row justify-content-center">
+    <div class="col text-center">
+      <h2><b>Democratization of plant research.</b></h2>
+      <h2><b>Made easy.</b></h2>
+    </div>
+  </div>
+</div>
+
+<!-- Our Mission -->
+<div class="container-md bg-mint">
+  <div class="row">
+    <div class="image">
+      <img src="assets/img/mission.svg"/>
+    </div>
+    <div class="text">
+      <div class="card bg-white">
+        <div class="card-body">
+          <h5 class="card-title text-mint">Mission</h5>
+          <h2 class="card-title">Driving the digital change in plant science</h2>
+          <p class="card-text">DataPLANT will path the way from classical paper publication to pure data publication
+            including the annotated research context.</p>
+          <a href="#" class="learn-more">learn more</a>
+        </div>      
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Community -->
+<div class="container-md bg-darkblue">
+  <div class="row">
+    <div class="image order-1 order-md-2">
+      <img src="assets/img/funding-map.svg"/>
+    </div>
+    <div class="text order-2 order-md-1">
+      <div class="card bg-white">
+        <div class="card-body">
+          <h5 class="text-darkblue card-title">Our Community</h5>
+          <h2 class="card-title">Fundamental research in plant science</h2>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices placerat arcu. Sed sit amet diam sed odio lacinia vestibulum eu vel felis. Suspendisse ut consequat urna. Vestibulum pulvinar id mauris et convallis. Sed sit amet pharetra ante, sit amet iaculis dolor. Proin a mauris et mi ornare semper sit amet ut eros.</p>
+          <a href="#" class="learn-more">learn more</a>
+        </div>      
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- ARC -->
+<div class="container-md bg-lightblue">
+  <div class="row">
+    <div class="image">
+      <img src="assets/img/arc-overview.svg"/>
+    </div>
+    <div class="text">
+      <div class="card bg-white">
+        <div class="card-body">
+          <h5 class="text-lightblue card-title">Annotated Research Context</h5>
+          <h2 class="card-title">Understanding ARC publication</h2>
+          <p class="card-text">DataPLANT will path the way from classical paper publication to pure data publication
+            including the annotated research context.</p>
+          <a href="#" class="learn-more">learn more</a>
+        </div>      
+      </div>
+     </div>
+  </div>
+</div>
+
+
+<!-- Service -->
+<div class="container-md bg-lightgray">
+  <div class="row">
+    <div class="image">
+      <img class="col-bg" src="assets/img/service.svg"/>
+    </div>
+    <div class="text">
+      <div class="card bg-white">
+        <div class="card-body">
+          <h5 class="card-title">Service</h5>
+          <h2 class="card-title">Building infrastructure and service landscape</h2>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices placerat arcu. Sed sit amet diam sed odio lacinia vestibulum eu vel felis. Suspendisse ut consequat urna. Vestibulum pulvinar id mauris et convallis. Sed sit amet pharetra ante, sit amet iaculis dolor. Proin a mauris et mi ornare semper sit amet ut eros.</p>
+          <a href="#" class="learn-more">learn more</a>
+        </div>      
+      </div>
+    </div>
+  </div>
+</div>
+  
+<!--- News -->
+
+<div class="container-md bg-yellow">
+  <div class="row">
+    <div class="col">
+      <h4>News</h4>
+    </div>
+  </div>
+  <div class="row">
+
+    <div class="news">
+      <div class="row">
+        <div class="date">
+          <h2>06</h2>
+          <h4>Mar</h4>
+        </div>
+        <div class="text">
+          <h6>Building infrastructure and service landscape</h6>
+          <p>Suspendisse cursus arcu sit amet nulla accumsan faucibus. Aliquam a risus vitae orci feugiat ultrices. Maecenas vitae mi quis lacus fringilla molestie. Pellentesque iaculis lacinia diam a imperdiet. Pellentesque sit amet euismod sem...
+          </p>
         </div>
       </div>
     </div>
-    <div class="col col-md-6 align-self-center">
-      <img class="col-bg" src="assets/img/funding-map.png"/>
+  
+    <div class="news">
+      <div class="row">
+        <div class="date">
+          <h2>24</h2>
+          <h4>Apr</h4>
+        </div>
+        <div class="text">
+          <h6>Building infrastructure and service landscape</h6>
+          <p>Vestibulum non orci lobortis, bibendum nunc non, rhoncus tortor. Integer placerat sollicitudin ligula eget hendrerit. Maecenas pharetra, libero luctus varius accumsan, erat odio laoreet ipsum, in fermentum massa elit eget tellus.</p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="row row-darkblue-bg">
-    <div class="col col-md-12">
-      <div class="btn-learn-more w-50 mx-auto">
-        <a href="#">learn more</a>
+    
+    <div class="news">
+      <div class="row">
+        <div class="date">
+          <h2>19</h2>
+          <h4>Sep</h4>
+        </div>
+        <div class="text">
+          <h6>Building infrastructure and service landscape</h6>
+          <p>Duis eget ipsum purus. Aenean consectetur turpis metus, sit amet consequat quam volutpat quis. Duis imperdiet purus ac dignissim bibendum. Aliquam erat volutpat. Etiam pharetra, tellus ut finibus elementum, mauris dui molestie massa, lobortis molestie quam tortor vitae tortor.</p>
+        </div>
       </div>
     </div>
   </div>
+</div>
 
+<!--- Jobs -->
+
+<div class="container-md bg-lightgray">
+  <div class="row">
+    <div class="col">
+      <h4>Jobs</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="jobs">
+      <div class="text">
+        <h4>Senior Data Scientist</h4>
+        <!-- <h6>Building infrastructure and service landscape</h6> -->
+        <p>Suspendisse cursus arcu sit amet nulla accumsan faucibus. Aliquam a risus vitae orci feugiat ultrices. Maecenas vitae mi quis lacus fringilla molestie. Pellentesque iaculis lacinia diam a imperdiet. Pellentesque sit amet euismod sem. Maecenas vitae elit iaculis, scelerisque odio eu, luctus purus. Duis gravida ut augue eu imperdiet. Donec elit ipsum, tristique vel volutpat vitae, elementum et urna. Duis id eros eget sapien accumsan vulputate.
+        </p>
+
+        <a href="#" class="learn-more mx-auto mt-3">learn more</a>
+      </div>
+    </div>
+      
+    <div class="jobs">
+      <div class="text">
+        <h4>Data Science Teacher</h4>
+        <!-- <h6>Building infrastructure and service landscape</h6> -->
+        <h6>Requirements</h6>
+        <p>
+          <ul>
+            <li>Teaching data science to data stewards.</li>
+            <li>Teaching teaching data science to data stewards.</li>
+            <li>Should know "data science".</li>
+          </ul>
+        </p>
+
+        <h6>Benefits</h6>
+        <ul>
+          <li>Gratuitous overtime without pay.</li>
+        </ul>
+
+        <a href="#" class="learn-more mx-auto mt-3">learn more</a>
+      </div>
+    </div>
+
+  </div>
 </div>
