add example jobs alert

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 layout: default
 title: Home
 ---
+<!--- Jobs ALERT -->
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+    <div class="alert alert-success text-center" role="alert">
+      DataPLANT is hiring! Check out our <a href="#jobs"><b>jobs listing</b></a>.
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Title -->
-<div class="container bg-white pt-4 pb-3">
+<div class="container pb-3">
   <div class="row justify-content-center">
     <div class="col-12 col-md-9 pb-5 pb-lg-0">
       <img src="assets/img/nfdi-hero.svg" style="width: 100%; margin-bottom: -3rem;"/>
