fix various minor errors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
 <div class="container pb-3">
   <div class="row justify-content-center">
     <div class="col-12 col-md-9 pb-5 pb-lg-0">
-      <img src="assets/img/nfdi-hero.svg" style="width: 100%; margin-bottom: -3rem;"/>
+      <img src="assets/img/nfdi-hero.svg" alt="NFDI stylized overview" style="width: 100%; margin-bottom: -3rem;"/>
     </div>
   </div>
 
@@ -33,7 +33,7 @@ title: Home
 <div class="container-md bg-mint">
   <div class="row">
     <div class="image">
-      <img src="assets/img/mission.svg"/>
+      <img src="assets/img/mission.svg" alt="mission statement"/>
     </div>
     <div class="text">
       <div class="card bg-white">
@@ -53,7 +53,7 @@ title: Home
 <div class="container-md bg-darkblue">
   <div class="row">
     <div class="image order-1 order-md-2">
-      <img src="assets/img/funding-map.svg"/>
+      <img src="assets/img/funding-map.svg" alt="plant biology funding map"/>
     </div>
     <div class="text order-2 order-md-1">
       <div class="card bg-white">
@@ -72,7 +72,7 @@ title: Home
 <div class="container-md bg-lightblue">
   <div class="row">
     <div class="image">
-      <img src="assets/img/arc-overview.svg"/>
+      <img src="assets/img/arc-overview.svg" alt="overview of annotated research contexts"/>
     </div>
     <div class="text">
       <div class="card bg-white">
@@ -93,7 +93,7 @@ title: Home
 <div class="container-md bg-lightgray">
   <div class="row">
     <div class="image">
-      <img class="col-bg" src="assets/img/service.svg"/>
+      <img class="col-bg" src="assets/img/service.svg" alt="services provided by DataPLANT"/>
     </div>
     <div class="text">
       <div class="card bg-white">
@@ -152,8 +152,7 @@ title: Home
       <div class="text">
         <h4>Senior Data Scientist</h4>
         <!-- <h6>Building infrastructure and service landscape</h6> -->
-        <p>Suspendisse cursus arcu sit amet nulla accumsan faucibus. Aliquam a risus vitae orci feugiat ultrices. Maecenas vitae mi quis lacus fringilla molestie. Pellentesque iaculis lacinia diam a imperdiet. Pellentesque sit amet euismod sem. Maecenas vitae elit iaculis, scelerisque odio eu, luctus purus. Duis gravida ut augue eu imperdiet. Donec elit ipsum, tristique vel volutpat vitae, elementum et urna. Duis id eros eget sapien accumsan vulputate.
-        </p>
+        <p>Suspendisse cursus arcu sit amet nulla accumsan faucibus. Aliquam a risus vitae orci feugiat ultrices. Maecenas vitae mi quis lacus fringilla molestie. Pellentesque iaculis lacinia diam a imperdiet. Pellentesque sit amet euismod sem. Maecenas vitae elit iaculis, scelerisque odio eu, luctus purus. Duis gravida ut augue eu imperdiet. Donec elit ipsum, tristique vel volutpat vitae, elementum et urna. Duis id eros eget sapien accumsan vulputate.</p>
 
         <a href="#" class="learn-more mx-auto mt-3">learn more</a>
       </div>
@@ -164,13 +163,11 @@ title: Home
         <h4>Data Science Teacher</h4>
         <!-- <h6>Building infrastructure and service landscape</h6> -->
         <h6>Requirements</h6>
-        <p>
-          <ul>
-            <li>Teaching data science to data stewards.</li>
-            <li>Teaching teaching data science to data stewards.</li>
-            <li>Should know "data science".</li>
-          </ul>
-        </p>
+        <ul>
+          <li>Teaching data science to data stewards.</li>
+          <li>Teaching teaching data science to data stewards.</li>
+          <li>Should know "data science".</li>
+        </ul>
 
         <h6>Benefits</h6>
         <ul>
