--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ title: Home
 </div>
 
 <!-- Our Mission -->
-<div class="container-md bg-mint">
-  <div class="row">
-    <div class="image">
+<div class="container-md">
+  <div class="row hero bg-mint">
+    <div class="hero-image">
       <img src="assets/img/mission.svg" alt="mission statement"/>
     </div>
-    <div class="text">
+    <div class="hero-content">
       <div class="card bg-white">
         <div class="card-body">
           <h5 class="card-title text-mint">Mission</h5>
@@ -50,12 +50,12 @@ title: Home
 </div>
 
 <!-- Community -->
-<div class="container-md bg-darkblue">
-  <div class="row">
-    <div class="image order-1 order-md-2">
+<div class="container-md">
+  <div class="row hero bg-darkblue">
+    <div class="hero-image order-1 order-md-2">
       <img src="assets/img/funding-map.svg" alt="plant biology funding map"/>
     </div>
-    <div class="text order-2 order-md-1">
+    <div class="hero-content order-2 order-md-1">
       <div class="card bg-white">
         <div class="card-body">
           <h5 class="text-darkblue card-title">Our Community</h5>
@@ -69,12 +69,12 @@ title: Home
 </div>
 
 <!-- ARC -->
-<div class="container-md bg-lightblue">
-  <div class="row">
-    <div class="image">
+<div class="container-md">
+  <div class="row hero bg-lightblue">
+    <div class="hero-image">
       <img src="assets/img/arc-overview.svg" alt="overview of annotated research contexts"/>
     </div>
-    <div class="text">
+    <div class="hero-content">
       <div class="card bg-white">
         <div class="card-body">
           <h5 class="text-lightblue card-title">Annotated Research Context</h5>
@@ -88,14 +88,13 @@ title: Home
   </div>
 </div>
 
-
 <!-- Service -->
-<div class="container-md bg-lightgray">
-  <div class="row">
-    <div class="image">
+<div class="container-md">
+  <div class="row hero bg-lightgray">
+    <div class="hero-image order-1 order-md-2">
       <img class="col-bg" src="assets/img/service.svg" alt="services provided by DataPLANT"/>
     </div>
-    <div class="text">
+    <div class="hero-content order-2 order-md-1">
       <div class="card bg-white">
         <div class="card-body">
           <h5 class="card-title">Service</h5>
@@ -107,25 +106,25 @@ title: Home
     </div>
   </div>
 </div>
-  
+
 <!--- News -->
 
-<div id="jobs" class="container-md bg-yellow">
-  <div class="row">
-    <div class="col">
-      <h4>News</h4>
+<div class="container-md">
+  <div class="row hero bg-yellow">
+
+    <div class="col-12 mt-1 mb-4 pl-2">
+      <h3>News</h3>
     </div>
-  </div>
-  <div class="row">
+
     {% assign news_items = site.news | sort: 'date' | reverse %}
     {% for item in news_items limit:4 %}
-    <div class="news">
+    <div class="news-item">
       <div class="row">
-        <div class="date">
+        <div class="col-2">
           <h2>{{ item.date | date: '%-d' }}</h2>
           <h4>{{ item.date | date: '%b' }}</h4>
         </div>
-        <div class="text">
+        <div class="text col-10">
           <a href="{{ item.url }}"><h6>{{ item.title }}</h6></a>
           <p>{{ item.content | strip_html | truncatewords:50 }}</p>
           <a class="btn-sm btn-secondary" href="{{ item.url }}">read more</a>
@@ -133,25 +132,22 @@ title: Home
       </div>
     </div>
     {% endfor %}
-  </div>
-  <div class="row justify-content-center">
-    <a href="/news.html" class="learn-more">more news</a>
+
+    <div class="col-12" style="text-align: center;">
+      <a href="/news.html" class="learn-more">more news</a>
+    </div>
+    
   </div>
 </div>
 
 <!--- Jobs -->
 
-<div class="container-md bg-lightgray">
-  <div class="row">
-    <div class="col">
-      <h4>Jobs</h4>
-    </div>
-  </div>
+<!-- <div class="container-md ">
+  <h3>JOBS</h3>
   <div class="row">
     <div class="jobs">
       <div class="text">
         <h4>Senior Data Scientist</h4>
-        <!-- <h6>Building infrastructure and service landscape</h6> -->
         <p>Suspendisse cursus arcu sit amet nulla accumsan faucibus. Aliquam a risus vitae orci feugiat ultrices. Maecenas vitae mi quis lacus fringilla molestie. Pellentesque iaculis lacinia diam a imperdiet. Pellentesque sit amet euismod sem. Maecenas vitae elit iaculis, scelerisque odio eu, luctus purus. Duis gravida ut augue eu imperdiet. Donec elit ipsum, tristique vel volutpat vitae, elementum et urna. Duis id eros eget sapien accumsan vulputate.</p>
 
         <a href="#" class="learn-more mx-auto mt-3">learn more</a>
@@ -161,7 +157,6 @@ title: Home
     <div class="jobs">
       <div class="text">
         <h4>Data Science Teacher</h4>
-        <!-- <h6>Building infrastructure and service landscape</h6> -->
         <h6>Requirements</h6>
         <ul>
           <li>Teaching data science to data stewards.</li>
@@ -179,4 +174,4 @@ title: Home
     </div>
 
   </div>
-</div>
+</div> -->
