add privacy, imprint, mission, community, consor

--- a/imprint.html
+++ b/imprint.html
@@ -1,38 +1,68 @@
 ---
+title: Imprint
+
 layout: default
-title: Legal Notice
+body-class: bg-lightgray
 ---
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h2>Imprint</h2>
-      <dl>
-        <dt>Address:</dt>
-        <dd>Albert-Ludwigs-Universität Freiburg</dd>
-      </dl>
-
-      ...
+<div class="container-md">
+  <div class="row hero">
+    <div class="col-md-12">
+      <h3>{{ page.title }}</h3>
     </div>
   </div>
+  <div class="row hero rounded bg-white">
+    <div class="col-md-12">
+      <table class="table table-striped">
+        <tbody><tr>
+            <td>Address:</td>
+            <td>Albert-Ludwigs-Universität Freiburg<br>
+                Friedrichstraße 39<br>
+                79098 Freiburg im Breisgau
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>The University of Freiburg is a corporation of public law.
+            It is represented legally by the <a target="_blank" href="http://www.uni-freiburg.de/administration/rektorat/rektor"> rector, Prof. Dr. Dr. h.c. Hans-Jochen Schiewer
+            </a>.<br>
+            Other responsibilities are regulated by the university’s <a target="_blank" href="http://www.uni-freiburg.de/go/iao">public information policy (Informationsangeboteordnung – IAO)</a>. </td>
+        </tr>
+        <tr>
+            <td>Telefonzentrale:</td>
+            <td>++49 (0) 761 / 203 - 0</td>
+        </tr>
+        <tr>
+            <td>Fax Zentrale Verwaltung:</td>
+            <td>++49 (0) 761 / 203 - 43 69</td>
+        </tr>
+        <tr>
+            <td>Zentrale E-Mail-Adresse:</td>
+            <td>info [at] uni-freiburg.de</td>
+        </tr>
+        <tr>
+            <td>Internet-Adresse:</td>
+            <td><a target="_blank" href="//www.uni-freiburg.de">http://www.uni-freiburg.de</a></td>
+        </tr>
+        <tr>
+            <td>VAT Registration Number</td>
+            <td>
+                complying to § 27a Umsatzsteuergesetz:<br>
+                <b>DE 142116817</b>
+            </td>
+        </tr>
+        <tr>
+            <td>Responsible Board of Control</td>
+            <td>Ministerium für Wissenschaft, Forschung und Kunst Baden-Württemberg, Königstraße 46, 70173 Stuttgart</td>
+	</tr>
+        <tr>
+            <td>Content Liability</td>
+	    <td>The content of nfdi4plants.de is maintained by the webmaster(s) of the website:<br><br>
+		Dr. Dirk von Suchodoletz (University of Freiburg)<br>Prof. (jun.) Dr. Timo Mühlhaus (University of Kaiserslautern<br>Prof. Dr. Björn Usadel (FZ Jülich)<br>
+		Dr. Jens Krüger (University of Tübingen)</td>
+        </tr>
+    </tbody></table>
+    </div>
+  </div>
+
 </div>
-
-
-<!-- Address:	
-Friedrichstraße 39
-79098 Freiburg im Breisgau
-The University of Freiburg is a corporation of public law. It is represented legally by the rector, Prof. Dr. Dr. h.c. Hans-Jochen Schiewer .
-Other responsibilities are regulated by the university’s public information policy (Informationsangeboteordnung – IAO).
-Telefonzentrale:	++49 (0) 761 / 203 - 0
-Fax Zentrale Verwaltung:	++49 (0) 761 / 203 - 43 69
-Zentrale E-Mail-Adresse:	info [at] uni-freiburg.de
-Internet-Adresse:	http://www.uni-freiburg.de
-VAT Registration Number	complying to § 27a Umsatzsteuergesetz:
-DE 142116817
-Responsible Board of Control	Ministerium für Wissenschaft, Forschung und Kunst Baden-Württemberg, Königstraße 46, 70173 Stuttgart
-Content Liability	The content of nfdi4plants.de is maintained by the webmaster(s) of the website:
-
-Dr. Dirk von Suchodoletz (University of Freiburg)
-Prof. (jun.) Dr. Timo Mühlhaus (University of Kaiserslautern
-Prof. Dr. Björn Usadel (FZ Jülich)
-Dr. Jens Krüger (University of Tübingen) -->
