--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Home
           <h2 class="card-title">Driving the digital change in plant science</h2>
           <p class="card-text">DataPLANT will path the way from classical paper publication to pure data publication
             including the annotated research context.</p>
-          <a href="#" class="learn-more">learn more</a>
+          <a href="/mission.html" class="learn-more">learn more</a>
         </div>      
       </div>
     </div>
@@ -61,7 +61,7 @@ title: Home
           <h5 class="text-darkblue card-title">Our Community</h5>
           <h2 class="card-title">Fundamental research in plant science</h2>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices placerat arcu. Sed sit amet diam sed odio lacinia vestibulum eu vel felis. Suspendisse ut consequat urna. Vestibulum pulvinar id mauris et convallis. Sed sit amet pharetra ante, sit amet iaculis dolor. Proin a mauris et mi ornare semper sit amet ut eros.</p>
-          <a href="#" class="learn-more">learn more</a>
+          <a href="/community.html" class="learn-more">learn more</a>
         </div>      
       </div>
     </div>
@@ -81,7 +81,7 @@ title: Home
           <h2 class="card-title">Understanding ARC publication</h2>
           <p class="card-text">DataPLANT will path the way from classical paper publication to pure data publication
             including the annotated research context.</p>
-          <a href="#" class="learn-more">learn more</a>
+          <a href="/arcs.html" class="learn-more">learn more</a>
         </div>      
       </div>
      </div>
@@ -100,7 +100,7 @@ title: Home
           <h5 class="card-title">Service</h5>
           <h2 class="card-title">Building infrastructure and service landscape</h2>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices placerat arcu. Sed sit amet diam sed odio lacinia vestibulum eu vel felis. Suspendisse ut consequat urna. Vestibulum pulvinar id mauris et convallis. Sed sit amet pharetra ante, sit amet iaculis dolor. Proin a mauris et mi ornare semper sit amet ut eros.</p>
-          <a href="#" class="learn-more">learn more</a>
+          <a href="/services.html" class="learn-more">learn more</a>
         </div>      
       </div>
     </div>
