update text on home

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
   <div class="row">
     <div class="col-12 mt-4">
     <div class="alert alert-success text-center" role="alert">
-      DataPLANT is hiring! Check out our <a href="#jobs"><b>jobs listing</b></a>.
+       The <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u"> <b>‘Call for ARCs’</b> </a> starts now.</br> Take our six minutes survey and be the first research group getting visited by DataPLANT’s data stewards.
       </div>
     </div>
   </div>
@@ -40,8 +40,9 @@ title: Home
         <div class="card-body">
           <h5 class="card-title text-mint upcase">Mission</h5>
           <h2 class="card-title">Driving the digital change in plant science</h2>
-          <p class="card-text">DataPLANT will path the way from classical paper publication to pure data publication
-            including the annotated research context.</p>
+          <p class="card-text">DataPLANT’s mission is to provide a sustainable and well annotated data management 
+            platform for plant sciences. DataPLANT will path pave the way from classical paper publication to pure 
+            data publication including the annotated research context</p>
           <a href="/mission.html" class="learn-more">learn more</a>
         </div>      
       </div>
@@ -60,7 +61,12 @@ title: Home
         <div class="card-body">
           <h5 class="text-darkblue card-title upcase">Our Community</h5>
           <h2 class="card-title">Fundamental research in plant science</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices placerat arcu. Sed sit amet diam sed odio lacinia vestibulum eu vel felis. Suspendisse ut consequat urna. Vestibulum pulvinar id mauris et convallis. Sed sit amet pharetra ante, sit amet iaculis dolor. Proin a mauris et mi ornare semper sit amet ut eros.</p>
+          <p class="card-text">DataPlant is primarily geared towards the needs of fundamental plant research 
+            (e.g. those represented by the DFG categories 202-[01 evolution  and systematics of plants and animals, 
+            04 plant physiology, 05 plant biochemistry and biophysics, 06 plant cell and developmental biology, 
+            07 plant genetics]. As such DataPlant is especially adapter to large scale data sets be it omics science 
+            or imaging and is ready to store petabaytes of annotated data.            
+          </p>
           <a href="/community.html" class="learn-more">learn more</a>
         </div>      
       </div>
@@ -78,9 +84,11 @@ title: Home
       <div class="card bg-white">
         <div class="card-body">
           <h5 class="text-lightblue card-title upcase">Annotated Research Context</h5>
-          <h2 class="card-title">Understanding ARC publication</h2>
-          <p class="card-text">DataPLANT will path the way from classical paper publication to pure data publication
-            including the annotated research context.</p>
+          <h2 class="card-title">Understanding ARC concept</h2>
+          <p class="card-text">DataPlant will allow users to store their data in form of an annotated 
+            research context. This includes not only the measurement data, but also (meta)data annotations, 
+            tools, and scripts. This will allow reproducibility plus to forward “raw data” and metadata 
+            slices to public repositories (e.g. EBI NCBI etc.)</p>
           <a href="/arcs.html" class="learn-more">learn more</a>
         </div>      
       </div>
@@ -99,7 +107,13 @@ title: Home
         <div class="card-body">
           <h5 class="card-title upcase">Service</h5>
           <h2 class="card-title">Building infrastructure and service landscape</h2>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultrices placerat arcu. Sed sit amet diam sed odio lacinia vestibulum eu vel felis. Suspendisse ut consequat urna. Vestibulum pulvinar id mauris et convallis. Sed sit amet pharetra ante, sit amet iaculis dolor. Proin a mauris et mi ornare semper sit amet ut eros.</p>
+          <p class="card-text">DataPLANT’s mission is service standing on the shoulders of giants. 
+            As such it relies on existing IT infrastructure and builds user-oriented services. 
+            DataPLANT wants to break the paradigm of  “we are a --- mandated provider so you have 
+            to live with our tools where even IT experts get gray hair when submitting data” to 
+            “we understand that annotating data and providing metadata takes precious and we are 
+            in it together so let’s make this as easy as possible”.
+          </p>
           <a href="/services.html" class="learn-more">learn more</a>
         </div>      
       </div>
