fix call for ARCs

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 layout: default
 title: Home
 ---
+
 <!--- Jobs ALERT -->
 <div class="container-md py-3">
   <div class="row">
     <div class="col-12 mt-4">
     <div class="alert alert-success text-center" role="alert">
-       The <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u"> <b>‘Call for ARCs’</b> </a> starts now.</br> Take our six minutes survey and be the first research group getting visited by DataPLANT’s data stewards.
+       The <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u"> <b>‘Call for ARCs’</b> </a> starts now.</br> Take our six-minute survey and be among first research group visited by DataPLANT’s data stewards.
       </div>
     </div>
   </div>
